# projectbahn

./: .env  AGENTS.md  README.md  db.sqlite3  manage.py  mlflow.db  pyproject.toml
.mem0_chroma/: chroma.sqlite3
projbahn/: asgi.py  dspy_settings.py  llm_encryption_settings.py  mem0_settings.py  settings.py  urls.py  wsgi.py
projects/: admin.py  api.py  apps.py  codebase_agent_client.py  event_logs.py  feature_chat.py  lmstudio.py  mem0_backfill.py  middleware.py  models.py  observability.py  project_memory.py  rich_logging.py  schemas.py  test_feature_endpoints.py  test_parent_service.py  views.py
projects/api/: __init__.py  common.py  event_logs.py  feature_chat.py  features.py  projects.py  tasks.py  users.py
projects/frontend/: api_client.py  services.py
projects/management/commands/: backfill_event_logs.py  backfill_mem0.py  projbahn_tui.py
projects/migrations/: 0001_initial.py  0002_feature.py  0003_task.py  0004_task_title_description.py  0005_eventlog.py  0006_rename_new_event_type_to_created.py  0007_projectllmconfig.py  0008_projectllmconfig_encrypted_api_key_featurechatmessage_and_more.py  0009_remove_llm_chat_tables.py  0010_restore_feature_chat_without_django_llm_chat.py  0011_projectcodebaseagentconfig.py
projects/services/: parent.py
projects/templates/projects/: dashboard.html  project_list.html
projects/tui/: api_client.py
tests/: conftest.py  mem0_backends.py  settings.py  test_admin.py  test_backfill_event_logs_command.py  test_backfill_mem0_command.py  test_codebase_agent_client.py  test_dspy_settings.py  test_event_logs_api.py  test_feature_chat_api.py  test_features_api.py  test_frontend_services.py  test_frontend_views.py  test_http_server_logging.py  test_llm_encryption_settings.py  test_lmstudio.py  test_mem0_settings.py  test_project_memory.py  test_projects_api.py  test_tasks_api.py  test_users_api.py
(+3 files in other folders)
