[project]
name = "projmgt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.4",
    "django-ninja>=1.6.2",
    "django-stubs>=6.0.3",
    "model-bakery>=1.23.4",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "projbahn.settings"
pythonpath = ["."]
testpaths = ["tests"]
