[project]
name = "projmgt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=46.0.7",
    "django>=6.0.4",
    "django-click>=2.5.0",
    "django-ninja>=1.6.2",
    "django-stubs>=6.0.3",
    "dspy>=3.1.3",
    "mlflow>=2.18.0",
    "model-bakery>=1.23.4",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "rich>=15.0.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "projbahn.settings"
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "live_llm: tests that call a real language model",
]
